<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/page1_textview_example"
            android:textAppearance="?textAppearanceHeadline6" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:hint="@string/page1_edittext_example"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?textAppearanceBody1"
                android:importantForAutofill="no"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/page1_button_example"
            android:textAppearance="?textAppearanceBody1" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/page1_switch_example"
            android:textAppearance="?textAppearanceBody1" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/page1_checkbox_example"
            android:textAppearance="?textAppearanceBody1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/page1_togglebutton_example"
            android:textAppearance="?textAppearanceBody1" />

        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/page1_tooglebutton_example"
            android:textAppearance="?textAppearanceBody1" />

    </LinearLayout>
</ScrollView>